# terraform-provider-datadog

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .prettierignore  .repository.datadog.yaml  .terraform.lock.hcl  .tfgen-run-report.json  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  GNUmakefile  IMPLEMENTATION_SUMMARY.md  LICENSE-3rdparty.csv  README.md  RELEASING.md  TESTING.md  docker-compose.yml  flaky_tests.yaml  go.mod  go.sum  incident-46051-wheel-of-misery-confluence.txt  incident-46051-wheel-of-misery.md  main.go  main.tf  repository.datadog.yaml  synthetics_test.md.tmpl  t.txt  terraform.tfvars  test_schema_evolution_manual.sh  tfgen-gen.sh
.generator/: README.md  config.yaml  conftest.py  datastore-config.yaml  datastore-item-config.yaml  pyproject.toml  team_hierarchy_links.txt
.generator/V2/: openapi.yaml
.generator/configs/: op-config.yaml
.generator/configs/V2/: op-openAPI.yaml
.generator/schemas/v1/: openapi.yaml
.generator/schemas/v2/: openapi.yaml
.generator/src/generator/: Reference Tables Terraform Support.md  cli.py  formatter.py  openapi.py  setup.py  type.py  utils.py
.generator/src/generator/templates/: base_resource.j2  create_method.j2  delete_method.j2  read_method.j2  request_builder.j2  resource_example.j2  resource_import_example.j2  resource_test.j2  schema.j2  types.j2  update_method.j2  update_state_method.j2
.generator/src/generator/templates/data_source/: base.j2  read.j2  schema.j2  state.j2  (+1 more)
.generator/tests/: test_scenarios.py
.generator/v2/: openapi.yaml
(+5508 files in other folders)
