[project]
name = "generator"
version = "0.1.0"
description = ""
authors = [{ name = "Datadog", email = "support@datadoghq.com"}]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "PyYaml (>=6.0,<7.0)",
    "jsonref (>=1.1.0,<2.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "python-dateutil (>=2.8.2)",
]   

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
